# rs-replace-char-ascii

./: Cargo.toml  README.md  bench.md  bench.sh  clippy.sh  doc-web.sh  rs-replace-char-ascii  rs-replace-char-ascii.wasm  run.sh
src/: main.rs  replace.rs
src/replace/: cfg.rs  std.rs  wasm.rs
src/replace/wasm/: simd.rs
