[package]
name = "rs-replace-char-ascii"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[features]
default = [
	"enable_simd",
]

enable_simd = []
